--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ main {
 
 /* 投稿欄（左固定） */
 .sidebar {
-  width: 100px;
+  width: 150px;
   flex-shrink: 0;
   border-right: 1px solid #ccc;
   background: #fafafa;
@@ -20,7 +20,7 @@ main {
   padding: 16px;
 }
 
-.complementary {
+.comporsor {
   width: 150px
   background: #b0c4de;
 }
