--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+.sawarabi-mincho-regular {
+  font-family: "Sawarabi Mincho", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 body {
   background: #93bdd5;
 }
 
 h1 {
-  font-family: sawarabi mincho;
   font-size: 40px;
 }
 
