--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ main {
 
 /* タイムライン本体（カード単位で横スクロール） */
 .vertical-timeline {
+  background: #93bdd5;
   display: flex;
   flex-direction: row-reverse; /* 右から左に並べる */
   align-items: flex-start;
