--- a/style.css
+++ b/style.css
@@ -5,16 +5,20 @@
 }
 
 
-body {
+.body {
   background: #93bdd5;
 }
 
-h1 {
+.generic {
+  background: #93bdd5;
+}
+
+.h1 {
   font-size: 40px;
 }
 
 /* 全体横並び */
-main {
+.main {
   display: flex;
   flex-direction: row-reverse; /* ← 右にsidebar, 左にtimeline */
   height: 100vh;
@@ -170,7 +174,7 @@ main {
   background: #c9182a;
 }
 
-footer {
+.footer {
   height: 100px;  /* 高さを固定 */
   padding: 16px;  /* 内側の余白 */
   box-sizing: border-box;
