--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ main {
   background: #c9182a;
 }
 
-.footer {
+footer {
   height: 100px;  /* 高さを固定 */
   padding: 16px;  /* 内側の余白 */
   box-sizing: border-box;
