--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ main {
   writing-mode: vertical-rl;
   text-orientation: mixed;
   font-size: 16px;
+  font-color: #F0F0F0;
   line-height: 1.8;
 }
 
