--- a/style.css
+++ b/style.css
@@ -103,7 +103,8 @@ main {
   width: auto;              /* ← 自動幅 */
   max-width: 200px;         /* ← 最大幅を設定 */
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-  background: #fff;
+  background: #93bdd5; /* デフォルト背景色 */
+  margin-bottom: auto;    /* main 下限いっぱいに配置 */
 }
 
 .note .content {
