--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
 
 h1 {
   font-size: 40px;
+    background: linear-gradient(
+    0deg,       /* ← 135度 = 左上 → 右下 方向 */
+    #909dc5,      
+    #9779b8,       
+    #465b95  
 }
 
 /* ==== レイアウト ==== */
