--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ main {
   border: 1px solid #242733;
   border-radius: 12px;
   padding: 14px;
-  min-height: 600px;
-  height: 100%;
+  min-height: 610px;
+  height: 610px;
   width: auto;
   max-width: 200px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
