--- a/style.css
+++ b/style.css
@@ -198,6 +198,20 @@ main {
 .relay-status.green { background: green; }
 .relay-status.red { background: red; }
 
+.modal {
+  display: none; /* デフォルトは非表示 */
+  position: fixed;
+  z-index: 2000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.5);
+}
+
+/* 表示用クラス */
+.modal.show {
+  display: block;
+}
+
 /* ==== フッター ==== */
 footer {
   height: 100px;
