--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ main {
   font-size: 14px;
   padding: 4px 8px;
   margin-bottom: 8px;
+  height: 50px;
   border: none;
   border-radius: 6px;
   background: #b0c4de;
