--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  background: #0f0;
+  background: #faf;
   color: #b0c4de;
 }
 
