--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
   border-radius: 6px;
   cursor: pointer;
   background: #b0c4de;
-  color: #faf;
+  color: #fff;
 }
 
 .header-actions button:hover {
