--- a/style.css
+++ b/style.css
@@ -209,10 +209,12 @@ main {
 /* リアクションボタン */
 .note .btn-reaction {
   border: none;
-  background: transparent;
   cursor: pointer;
   font-size: 1.2rem;
   margin-top: 4px;
+  width: 30px;
+  height: 30px;
+  border-radius: 6px;
   transition: transform 0.2s ease;
 }
 
