--- a/style.css
+++ b/style.css
@@ -230,10 +230,22 @@ main {
 }
 
 /* ==== モダール ==== */
-.modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; 
+.modal {
+ background: linear-gradient(180deg, #909dc5, #9779b8, #465b95);
+ color: #fff;
+display: none;
+position: fixed;
+z-index: 1000;
+left: 0;
+top: 0;
+ margin: 5% auto;
+ padding: 20px;
 width: 100%;
 height: 100%;
-background: rgba(0, 0, 0, 0.5); overflow: auto;
+ max-width: 500px;
+ border-radius: 12px;
+ box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+overflow: auto;
 }
 
 .modal-content {
