--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
    フォント
 ============================== */
 body {
-  background: #93bdd5;
+  background: #81b7d6;
   margin: 0;
   font-family: "Sawarabi Mincho", serif;
 }
@@ -205,7 +205,7 @@ main {
   padding: 14px;
   border: 1px solid #242733;
   border-radius: 12px;
-  background: #93bdd5;
+  background: #81b7d6;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
 }
 
